# reserve-agent

./: .gitignore  Dockerfile  README.md  SETUP_AUTH.md  docker-compose.yml  package-lock.json  render.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: api.py  firebase_auth.py  main.py
backend/app/agent/: client.py  loop.py  tools.py
backend/app/agent/modules/: __init__.py  base.py  cashflow.py  data.py  discount.py  reserve.py
backend/app/cashflow/: compute.py
backend/app/core/: excel_parser.py  frequency_severity.py  ldf.py
backend/app/data/: parser.py  triangle_builder.py
backend/tests/: test_agent_chat.py  test_agent_client.py  test_agent_loop_paths.py  test_agent_modules.py  test_agent_tools.py  test_agent_tools_branches.py  test_api.py  test_api_endpoints.py  test_cashflow_compute.py  test_chain_ladder.py  test_excel_parser.py  test_firebase_auth.py  test_frequency_severity.py  test_ldf.py  test_ldf_integration.py  test_parsers.py  test_triangle.py  test_triangle_builder_counts.py
enterprise-v2/: .gitignore  (+2 more)
enterprise-v2/backend/: pyproject.toml  requirements.txt  schema.sql
enterprise-v2/backend/app/: api.py  bootstrap.py  db.py  schemas.py
enterprise-v2/backend/app/core/: chain_ladder.py  excel_parser.py
enterprise-v2/backend/app/data/: prim_parser.py  triangle_builder.py
enterprise-v2/backend/tests/: conftest.py  test_auth.py  test_build_triangle_currency.py  test_connections_api.py  test_data.py  test_data_import.py  test_locks.py  test_roll_forward.py  test_roll_forward_endpoint.py  test_state.py  test_users.py
(+227 files in other folders)
