[project]
name = "reserve-agent-backend"
version = "0.1.0"
description = "Aktüeryal rezerv analizi backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "chainladder>=0.8.23",
    "pydantic>=2.9",
    "openai>=1.54",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
