[project]
name = "reserve-agent-enterprise"
version = "1.0.0"
description = "Aktüeryal rezerv analizi — Enterprise (Oracle)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "chainladder>=0.8.23",
    "pydantic>=2.9",
    "openai>=1.54",
    "httpx>=0.27",
    "python-oracledb>=2.3",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
